--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Schoolbell&display=swap');
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 * {
     box-sizing: border-box;
 }
 
 body {
-    background-color: aqua;
+    background-color: #1DCD9F;
     color: black;
     font-family: 'Quicksand', sans-serif;
     margin: 0;
@@ -42,6 +46,8 @@ input, button {
 
 input[type="text"] {
     width: 300px;
+    background-color: black;
+    color: white;
 }
 
 .search-btn {
@@ -50,6 +56,8 @@ input[type="text"] {
     border-radius: 0;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+    background-color: black;
+    color: white;
 }
 
 #category-select {
@@ -57,16 +65,16 @@ input[type="text"] {
     font-size: 14px;
     padding: 8px 12px;
     margin-left: 10px;
-    border: 1px solid black;
     border-radius: 5px;
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
     cursor: pointer;
-    transition: all 0.3s ease;
+    overflow: hidden;
 }
 
-#category-select:hover {
-    background-color: #f0f0f0;
+#category-select option {
+    background-color: black;
+    color: white;
 }
 
 .random-btn {
@@ -74,6 +82,8 @@ input[type="text"] {
     margin-left: 10px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+    background-color: black;
+    color: white;
 }
 
 #about-section {
@@ -81,20 +91,8 @@ input[type="text"] {
     width: 100%;
     border: 2px dashed black;
     border-radius: 10px;
-    background-color: #f9f9f9;
+    background-color: #169976;
     text-align: center;
-}
-
-#about-section h2 {
-    margin-bottom: 15px;
-    font-size: 22px;
-    color: #333;
-}
-
-#about-section p {
-    font-size: 14px;
-    color: #555;
-    line-height: 1.5;
 }
 
 .meals {
@@ -354,10 +352,10 @@ input[type="text"] {
 footer {
   margin-top: 60px;
   padding: 30px 0;
-  background-color: #f8f8f8;
-  border-top: 2px solid #ccc;
+  background-color: #222222;
+  border-top: 2px solid #1DCD9F;
   text-align: center;
-  color: #333;
+  color: white;
   font-size: 15px;
 }
 
@@ -378,24 +376,24 @@ footer {
 .footer-column h3 {
   font-size: 17px;
   margin-bottom: 10px;
-  color: #111;
+  color: white;
 }
 
 .footer-column a {
-  color: #007bff;
+  color: #169976;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s ease;
 }
 
 .footer-column a:hover {
-  color: #0056b3;
+  color: #106e55;
   text-decoration: underline;
 }
 
 .footer-credit {
   font-size: 13px;
-  color: #666;
+  color: #767676;
 }
 
 @media (max-width: 800px) {
