--- a/add-recipe.css
+++ b/add-recipe.css
@@ -2,10 +2,11 @@
 
 * {
     box-sizing: border-box;
+    font-family: 'Quicksand', sans-serif;
 }
 
 body {
-    background-color: aqua;
+    background-color: #1DCD9F;
     color: black;
     font-family: 'Quicksand', sans-serif;
     margin: 0;
@@ -15,15 +16,14 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #007bff;
+  background-color: black;
   color: white;
-  padding: 15px 20px;
-  border-radius: 8px;
+  padding: 5px 20px;
 }
 
 .back-btn {
-  background-color: white;
-  color: #007bff;
+  background-color: #1DCD9F;
+  color: black;
   text-decoration: none;
   padding: 8px 15px;
   border-radius: 5px;
@@ -31,13 +31,11 @@ header {
   transition: background-color 0.3s;
 }
 
-.back-btn:hover {
-  background-color: #e3e3e3;
-}
-
 #create-recipe {
   margin-top: 40px;
-  background: #f9f9f9;
+  background: black;
+  color: white;
+  font-weight: bold;
   padding: 25px;
   border-radius: 10px;
   max-width: 500px;
@@ -54,12 +52,13 @@ header {
 #recipe-form textarea {
   padding: 10px;
   border-radius: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid black;
 }
 
 #recipe-form button {
-  background-color: #007bff;
-  color: white;
+  background-color: #1DCD9F;
+  color: black;
+  font-weight: bold;
   padding: 10px;
   border: none;
   border-radius: 8px;
@@ -67,5 +66,5 @@ header {
 }
 
 #recipe-form button:hover {
-  background-color: #0056b3;
+  background-color: #169b78;
 }
